--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\az\\.virtualenvs\\IMAGINE-Dlko8K2n\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\user\\.virtualenvs\\img-cWfpU0cc\\Scripts\\python.exe"
 }
