--- a/Pipfile
+++ b/Pipfile
@@ -10,12 +10,10 @@ pylint = "*"
 defusedxml = "==0.6.0"
 diff-match-patch = "==20181111"
 dj-database-url = "==0.5.0"
-django = "==2.2.5"
 django-heroku = "==0.3.1"
 django-import-export = "==1.2.0"
 django-webpack-loader = "==0.6.0"
 djangorestframework = "==3.10.3"
-et-xmlfile = "==1.0.1"
 gunicorn = "==19.9.0"
 jdcal = "==1.4.1"
 odfpy = "==1.4.0"
@@ -31,7 +29,9 @@ xlwt = "==1.3.0"
 "backports.csv" = "==1.0.7"
 PyYAML = "==5.1.2"
 django-ckeditor = "*"
-pillow = "*"
+Django = "==2.2.5"
+et_xmlfile = "==1.0.1"
+Pillow = "*"
 
 [requires]
 python_version = "3.7"
